<resources>
    <string name="app_name">DoAnCuoiKi_dotcuoi</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="tradeup">TradeUp</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="logo_google">logo google</string>
    <string name="ng_nh_p_b_ng_google">Đăng nhập bằng Google</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="b_n_ch_a_c_t_i_kho_n_ng_k">Bạn chưa có tài khoản? Đăng ký</string>
    <string name="email">Email</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="ng_k">Đăng ký</string>
    <string name="c_t_i_kho_n_ng_nh_p">Đã có tài khoản? Đăng nhập</string>
    <string name="ng_k_t_i_kho_n">Đăng ký tài khoản</string>
    <string name="ng_k_b_ng_google">Đăng ký bằng Google</string>
    <string name="default_web_client_id">121284621877-4kdfueoff7jt6302d9e3pm0qfbhs1n7n.apps.googleusercontent.com</string>
    <string name="nh_p_email_c_a_b_n">Nhập email của bạn</string>
    <string name="g_i_y_u_c_u">Gửi yêu cầu</string>
    <string name="quay_l_i_ng_nh_p">Quay lại đăng nhập</string>
    <string name="google_maps_key">AIzaSyAnW2d_i4goI3-dz82ZK1csC44Gcz98fXE</string>
    <string name="back">Back</string>
    <string name="t_n_ng_i_nh_n">Tên người nhận</string>
    <string name="block">Block</string>
    <string name="emoji">Emoji</string>
    <string name="nh_p_tin_nh_n">Nhập tin nhắn...</string>
    <string name="nh">Ảnh</string>
    <string name="g_i">Gửi</string>
    <string name="avatar">Avatar</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="c_p_nh_t">Cập nhật</string>
    <string name="nh_p_a_ch">Nhập địa chỉ...</string>
    <string name="t_m_ki_m">Tìm kiếm</string>
    <string name="ch_n_v_tr_n_y">Chọn vị trí này</string>
    <string name="nh_s_n_ph_m">Ảnh sản phẩm</string>
    <string name="th_m_nh">Thêm ảnh</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="nh_p_t_n_s_n_ph_m">Nhập tên sản phẩm</string>
    <string name="m_t">Mô tả</string>
    <string name="nh_p_m_t">Nhập mô tả</string>
    <string name="gi_vn">Giá (VNĐ)</string>
    <string name="vd_1500000">VD: 1500000</string>
    <string name="t_nh_tr_ng">Tình trạng</string>
    <string name="v_tr">Vị trí</string>
    <string name="ch_n_v_tr_b_n">Chọn vị trí bán</string>
    <string name="danh_m_c">Danh mục</string>
    <string name="tr_ng_th_i">Trạng thái</string>
    <string name="th_m_s_n_ph_m">Thêm sản phẩm</string>
    <string name="hu_th_m">Huỷ thêm</string>
    <string name="tin_nh_n">Tin nhắn</string>
    <string name="h_m">Ảnh sản phẩm</string>
    <string name="then">Thêm ảnh</string>
    <string name="t_n_s_n_ph_">Tên sản phẩm</string>
    <string name="nh_p_t_n_s_n_ph_">Nhập tên sản phẩm</string>
    <string name="mota">Mô tả</string>
    <string name="nh_p_m_ta">Nhập mô tả</string>
    <string name="gi_vnd">Giá (VNĐ)</string>
    <string name="vd_150000">VD: 1500000</string>
    <string name="t_nh_tr_n">Tình trạng</string>
    <string name="danh">Danh mục</string>
    <string name="ssfg">Trạng thái</string>
    <string name="v_tri">Vị trí</string>
    <string name="ch_n_v_tr_b_">Chọn vị trí bán</string>
    <string name="th_m_m_gi_m_gi">Thêm mã giảm giá</string>
    <string name="m_gi_m">Mã giảm</string>
    <string name="s_ti_n_gi_m">Số tiền giảm</string>
    <string name="emm">thêm</string>
    <string name="l_u_ch_nh_s_a">Lưu chỉnh sửa</string>
    <string name="hu">Huỷ</string>
    <string name="tradeups">TradeUp</string>
    <string name="ucda">Danh mục</string>
    <string name="t_t_c_s_n_ph_m">Tất cả sản phẩm</string>
    <string name="ch_a_c_s_n_ph_m_c_ng_b_n">Chưa có sản phẩm được đăng bán</string>
    <string name="bac">Back</string>
    <string name="s_n_ph_m_c_nh_n">Sản phẩm cá nhân</string>
    <string name="ch_a_c_s_n_ph_m_n_o">Chưa có sản phẩm nào.</string>
    <string name="quay_l_i">Quay lại</string>
    <string name="t_t_c_nh_gi">Tất cả đánh giá</string>
    <string name="b_n_ch_a_c_nh_gi_n_o">Bạn chưa có đánh giá nào!</string>
    <string name="t_n_ng_i_b_n">Tên người bán</string>
    <string name="_20_ph_t_tr_c">20 phút trước</string>
    <string name="_1_1">1/1</string>
    <string name="t_n_s_n_ph_m_">Tên sản phẩm</string>
    <string name="_15_000_000">15.000.000đ</string>
    <string name="ang_b_n">Đang bán</string>
    <string name="t_nh_tr_ng_m_i_100">Tình trạng: Mới 100%</string>
    <string name="m_t_s_n_ph_m_chi_ti_t">Mô tả sản phẩm chi tiết</string>
    <string name="danh_m_c_laptop">Danh mục: Laptop</string>
    <string name="h_n_i">Hà Nội</string>
    <string name="mua">Mua</string>
    <string name="gi_h_ng">Giỏ hàng</string>
    <string name="nh_n_tin">Nhắn tin</string>
    <string name="tr_gi">Trả giá</string>
    <string name="_4_7_5">4.7/5</string>
    <string name="nh_gi_v_nh_n_x_t_c_a_b_n">Đánh giá và nhận xét của bạn</string>
    <string name="nh_n_x_t_v_s_n_ph_m_n_y">Nhận xét về sản phẩm này...</string>
    <string name="g_uii">Gửi</string>
    <string name="c_c_nh_gi_v_s_n_ph_m">Các đánh giá về sản phẩm</string>
    <string name="t_n_ng_i_d_ng">Tên người dùng</string>
    <string name="mail">Email</string>
    <string name="ng_y_t_o_10_07_2024">Ngày tạo: 10/07/2024</string>
    <string name="qu_n_l">Quản lý</string>
    <string name="c_c_nh_gi_s_n_ph_m">Các đánh giá sản phẩm</string>
    <string name="qu_n_l_giao_d_ch">Quản lý giao dịch</string>
    <string name="c_c_y_u_c_u_tr_gi">Các yêu cầu trả giá</string>
    <string name="danh_s_ch_s_n_ph_m_c_nh_n">Danh sách sản phẩm cá nhân</string>
    <string name="c_nh_n">Cá nhân</string>
    <string name="ch_nh_s_a_t_i_kho_n">Chỉnh sửa tài khoản</string>
    <string name="quy_n_ri_ng_t">Quyền riêng tư</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="x_a_t_i_kho_n">Xóa tài khoản</string>
    <string name="t_n_ng_i_d_ngu">Tên người dùng</string>
    <string name="e">Email</string>
    <string name="ad">Địa chỉ</string>
    <string name="nh_n_ti">Nhắn tin</string>
    <string name="c_c_s_n_ph_m_ng">Các sản phẩm đã đăng</string>
    <string name="ng_i_n_y_ch_a_ng_s_n_ph_m_n_o">Người này chưa đăng sản phẩm nào</string>
    <string name="back_">Quay lại</string>
    <string name="t_m_ki_m_s_n_ph_m">Tìm kiếm sản phẩm</string>
    <string name="nh_p_t_n_s_n_ph_mm">Nhập tên sản phẩm *</string>
    <string name="t_m_ki_mm">Tìm kiếm</string>
    <string name="danh_s_ch_s_n_ph_m">Danh sách sản phẩm</string>
    <string name="kh_ng_t_m_th_y_s_n_ph_m_n_o_ph_h_p">Không tìm thấy sản phẩm nào phù hợp</string>
    <string name="category_laptop">Category laptop</string>
    <string name="laptop">Laptop</string>
    <string name="nguy_n_v_n_a">Nguyễn Văn A</string>
    <string name="n_i_dung_tin_nh_n_cu_i_c_ng">Nội dung tin nhắn cuối cùng</string>
    <string name="_18_21">18:21</string>
    <string name="m_code123">Mã: CODE123</string>
    <string name="gi_m_10000">Giảm: 10000đ</string>
    <string name="x_a">Xóa</string>
    <string name="t_n_ng_i_b_nn">Tên người bán</string>
    <string name="_20_ph_t_tr_croi">20 phút trước</string>
    <string name="t_n_s_n_ph_mh">Tên sản phẩm</string>
    <string name="_15_500_000d">15.500.000đ</string>
    <string name="m_t_ng_n_v_s_n_ph_m">Mô tả ngắn về sản phẩm</string>
    <string name="_lap">Danh mục: Laptop</string>
    <string name="h_n_ij">Hà Nội</string>
    <string name="xem_chi_ti_t">Xem chi tiết</string>
    <string name="h_y_ng_b_n">Hủy đăng bán</string>
    <string name="available">Available</string>
    <string name="t_n_ng_i_b_ne">Tên người bán</string>
    <string name="t_n_s_n_ph_ma">Tên sản phẩm</string>
    <string name="_15_500_000ds">15.500.000đ</string>
    <string name="_20_ph_t_tr_cr">20 phút trước</string>
    <string name="khac">Danh mục: Laptop</string>
    <string name="h_n_ioi">Hà Nội</string>
    <string name="xem_chi_ti_tro">Xem chi tiết</string>
    <string name="availableroi">Available</string>
    <string name="m_t_ng_n_v_s_n_ph_mk">Mô tả ngắn về sản phẩm</string>
    <string name="name">Tên người dùng</string>
    <string name="nh_n_x_t_v_s_n_ph_m">Nhận xét về sản phẩm...</string>
    <string name="_10_24_10_07_2025">10:24 10/07/2025</string>
    <string name="xo">Xoá</string>
    <string name="ng_i_nh_gi_nguy_n_v_n_a">Người đánh giá: Nguyễn Văn A</string>
    <string name="t_n_b_i_post_laptop_acer_aspire">Tên bài post: Laptop Acer Aspire</string>
    <string name="nh_gi_s_n_ph_m_r_t_t_t">Đánh giá: Sản phẩm rất tốt!</string>
    <string name="ng_y_nh_gi_12_07_2024_20_45">Ngày đánh giá: 12/07/2024 20:45</string>
    <string name="ddd">Giỏ hàng</string>
    <string name="quay_l_">Quay lại</string>
    <string name="danh_s_ch_tr_gi">Danh sách trả giá</string>
    <string name="ch_a_c_y_u_c_u_tr_gi_n_o">Chưa có yêu cầu trả giá nào!</string>
    <string name="t_ch_i">Từ chối</string>
    <string name="ph_n_h_i_gi">Phản hồi giá</string>
    <string name="ch_p_nh_n">Chấp nhận</string>
    <string name="_20_02_19_07">20:02 19/07</string>
    <string name="ng_i_mua_nguy_n_v_n_a">Người mua: Nguyễn Văn A</string>
    <string name="gi_tr_1_000_000">Giá đã trả: 1.000.000đ</string>
    <string name="tr_ng_th_i_ch_x_c_nh_n">Trạng thái: Chờ xác nhận</string>
    <string name="t_n_s_n_ph_mt">Tên sản phẩm</string>
    <string name="gi_h_nga">Giỏ hàng</string>
    <string name="ch_a_c_s_n_ph_m_n_o_trong_gi_h_ng">Chưa có sản phẩm nào trong giỏ hàng</string>
    <string name="t_ng_0">Tổng: 0đ</string>
    <string name="thanh_to_n">Thanh toán</string>
    <string name="rrr">Tên sản phẩm</string>
    <string name="gi_1_000_000">Giá: 1.000.000đ</string>
    <string name="x_aa">Xóa</string>
    <string name="ch_n_t_t_c">Chọn tất cả</string>
    <string name="t_ng_0o">Tổng: 0đ</string>
    <string name="vnb">Thanh toán</string>
    <string name="l_ch_s_giao_d_ch">Lịch sử giao dịch</string>
    <string name="ch_a_c_giao_d_ch_n_o">Chưa có giao dịch nào.</string>
    <string name="t_n_s_n_ph_maa">Tên sản phẩm</string>
    <string name="ffff">Giá: 0đ</string>
    <string name="adasasf">Đã thanh toán</string>
</resources>