<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent">

    <!-- Dòng nhập địa chỉ và nút tìm kiếm ở phía trên -->
    <LinearLayout
        android:id="@+id/searchBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:background="#E0E0E0">

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_a_ch"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_m_ki_m" />
    </LinearLayout>

    <!-- MapView chiếm toàn bộ phần còn lại, phía trên nút và dưới search bar -->
    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchBar"
        android:layout_above="@id/btnSelectLocation" />

    <Button
        android:id="@+id/btnSelectLocation"
        android:text="@string/ch_n_v_tr_n_y"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
